時間與字串轉換

--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -147,6 +147,93 @@
     "print(now.minute)\n",
     "print(now.second)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-11-02 13:48:08.743663\n",
+      "11\n",
+      "2\n",
+      "2022\n",
+      "13\n",
+      "48\n",
+      "8\n",
+      "民國111年11月2日13點48分\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "current = datetime.now()\n",
+    "print(current)\n",
+    "print(current.month)\n",
+    "print(current.day)\n",
+    "print(current.year)\n",
+    "print(current.hour)\n",
+    "print(current.minute)\n",
+    "print(current.second)\n",
+    "\n",
+    "print(f'民國{current.year-1911}年{current.month}月{current.day}日{current.hour}點{current.minute}分')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-11-02 13-48-08'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用datetime中實體方法strftime()，將現在時間列印出來\n",
+    "current.strftime(\"%Y-%m-%d %H:%M:%S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-11-02 13:48:08\n",
+      "11\n",
+      "2\n",
+      "2022\n",
+      "13\n",
+      "48\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字串轉為時間\n",
+    "datetime_str = '2022-11-02 13:48:08'\n",
+    "datetime_obj = datetime.strptime(datetime_str,'%Y-%m-%d %H:%M:%S')\n",
+    "print(datetime_str)\n",
+    "print(datetime_obj.month)\n",
+    "print(datetime_obj.day)\n",
+    "print(datetime_obj.year)\n",
+    "print(datetime_obj.hour)\n",
+    "print(datetime_obj.minute)\n",
+    "print(datetime_obj.second)"
+   ]
   }
  ],
  "metadata": {
